[tool.poetry]
name = "sub_wheel"
version = "0.1.0"
description = ""
authors = ["Almaz Kunpeissov <almaz.kun@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
